# MVP-Coruja

./: .dockerignore  .editorconfig  .env  .flaskenv  .gitignore  .secrets.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt  requirements_dev.txt  settings.toml  wsgi.ini  wsgi.py
coruja/: __init__.py  api.py  app.py  application.py  auth.py  database.py  forms.py  helpers.py  models.py  utils.py
coruja/decorators/: __init__.py  analysis.py  proxy.py
coruja/extensions/: auth.py  commands.py  configurations.py  database.py  jinja.py  securancy.py  sessions.py
coruja/middlewares/: __init__.py  middlewares.py
coruja/models/: __init__.py  actives.py  analysis.py  configurations.py  dangers.py  institution.py  organs.py  permissions.py  relationships.py  units.py  users.py
coruja/restapi/: __init__.py  admin.py  analysis.py  analysis_risk.py  analysis_vulnerability.py  api.py  application.py  auth.py  institution.py  organ.py  unit.py  users.py
coruja/restapi/admin/: __init__.py  admin.py  category.py  logs.py  subcategory.py  user.py  vulnerability.py
coruja/static/js/: script.js
coruja/templates/: base.html  macros.html
coruja/templates/admin/: categories.html  category_form.html  changes.html  create_category.html  create_subcategory.html  create_vulnerability.html  create_vulnerability_subcategory.html  edit_category.html  edit_subcategory.html  edit_vulnerability.html  index.html  records.html  subcategories.html  user_info.html  (+2 more)
migrations/versions/: b6b511ad4ffd_.py
(+23 files in other folders)
